// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainContainer component matches the snapshot on error 1`] = `
<div
  className="Main"
>
  <div
    className="Error"
  >
    <h1>
      Не удалось загрузить данные
    </h1>
  </div>
</div>
`;

exports[`MainContainer component matches the snapshot when local weather is loaded 1`] = `
<div
  className="Main"
>
  <div
    className="currentCity"
  >
    <h1>
      Moscow
    </h1>
    <div
      className="additionalInfo"
    >
      <img
        alt="Иконка погоды"
        className="weatherImage"
        src="abcd"
      />
      <h1>
        temp
      </h1>
    </div>
  </div>
  <div
    className="WeatherInfo"
  >
    <div
      className="Info"
    >
      <h3>
        Ветер
      </h3>
      <h4>
        wind
      </h4>
    </div>
    <div
      className="Info"
    >
      <h3>
        Облачность
      </h3>
      <h4>
        cloudiness
      </h4>
    </div>
    <div
      className="Info"
    >
      <h3>
        Давление
      </h3>
      <h4>
        pressure
      </h4>
    </div>
    <div
      className="Info"
    >
      <h3>
        Влажность
      </h3>
      <h4>
        humidity
      </h4>
    </div>
    <div
      className="Info"
    >
      <h3>
        Координаты
      </h3>
      <h4>
        [location]
      </h4>
    </div>
  </div>
</div>
`;

exports[`MainContainer component matches the snapshot when local weather is loading 1`] = `
<div
  className="Main"
>
  <div
    className="Loader"
  >
    <h1>
      Подождите, данные загружаются
    </h1>
    <div
      className="Spinner"
    />
  </div>
</div>
`;
